--- a/my_react_app/public/index.html
+++ b/my_react_app/public/index.html
@@ -28,8 +28,52 @@
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="pageOuter">
+    <div id="root"></div>
 
-<div id="root"></div>
+    <div class="footer">
+        <div class="contain">
+            <div class="col">
+                <h1>About</h1>
+                <ul>
+                    <li>About</li>
+                    <li>Mission</li>
+                    <li>Social</li>
+                    <li>Get in touch</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h1>Resources</h1>
+                <ul>
+                    <li>Webmail</li>
+                    <li>Redeem code</li>
+                    <li>WHOIS lookup</li>
+                    <li>Site map</li>
+                    <li>Web templates</li>
+                    <li>Email templates</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h1>Support</h1>
+                <ul>
+                    <li>Contact us</li>
+                    <li>Web chat</li>
+                    <li>Open ticket</li>
+                </ul>
+            </div>
+            <div class="col social">
+                <h1>Social</h1>
+                <ul>
+                    <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
+                    <li><img src="https://svgshare.com/i/8zE.svg" width="32" style="width: 32px;"></li>
+                    <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
@@ -41,45 +85,6 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 </body>
-<div class="footer">
-    <div class="contain">
-        <div class="col">
-            <h1>About</h1>
-            <ul>
-                <li>About</li>
-                <li>Mission</li>
-                <li>Social</li>
-                <li>Get in touch</li>
-            </ul>
-        </div>
-        <div class="col">
-            <h1>Resources</h1>
-            <ul>
-                <li>Webmail</li>
-                <li>Redeem code</li>
-                <li>WHOIS lookup</li>
-                <li>Site map</li>
-                <li>Web templates</li>
-                <li>Email templates</li>
-            </ul>
-        </div>
-        <div class="col">
-            <h1>Support</h1>
-            <ul>
-                <li>Contact us</li>
-                <li>Web chat</li>
-                <li>Open ticket</li>
-            </ul>
-        </div>
-        <div class="col social">
-            <h1>Social</h1>
-            <ul>
-                <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-                <li><img src="https://svgshare.com/i/8zE.svg" width="32" style="width: 32px;"></li>
-                <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
-            </ul>
-        </div>
-        <div class="clearfix"></div>
-    </div>
-</div>
+
+
 </html>
