--- a/my_react_app/public/index.html
+++ b/my_react_app/public/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
