--- a/my_react_app/public/index.html
+++ b/my_react_app/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <meta
             name="viewport"
